@@ -198,6 +198,8 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.8rc1
 
+ - [ZBXNEXT-902] changed API search wildcard from "%" to "*" (Vedmak,Eduard)
+ - [ZBX-3967] fixed alerter hang on long running alert scripts (Deniss)
  - [ZBX-3970] fixed proxy crash after database connection to postgresql is recovered (Deniss)
  - [ZBX-3175] fixed value type for 'vfs.fs.size[/var,used]' in data.sql (Sasha)
  - [ZBXNEXT-900] added support of {TRIGGER.ID} macro in a trigger url (Vedmak,Sasha)
